--- a/SVM.html
+++ b/SVM.html
@@ -45,6 +45,48 @@
         .dark-mode .toggle-mode {
             color: white;
         }
+        .burger-menu {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            cursor: pointer;
+            background: none;
+            border: none;
+            outline: none;
+            font-size: 24px;
+            color: white;
+        }
+        .dark-mode .burger-menu {
+            color: white;
+        }
+        .burger-menu div {
+            width: 30px;
+            height: 4px;
+            background-color: currentColor;
+            margin: 5px 0;
+        }
+        .menu {
+            display: none;
+            position: absolute;
+            top: 60px;
+            left: 20px;
+            background-color: #4CAF50;
+            border: 1px solid #ccc;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .menu a {
+            color: white;
+            text-decoration: none;
+            display: block;
+            margin: 5px 0;
+        }
+        .menu a:hover {
+            text-decoration: underline;
+        }
+        .dark-mode .menu {
+            background-color: #555;
+        }
         h1, h2 {
             color: #4CAF50;
         }
@@ -59,6 +101,18 @@
 <body>
     <header>
         Understanding Support Vector Machines
+        <button class="burger-menu" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </button>
+        <div class="menu" id="menu">
+            <a href="index.html">Home</a>
+            <a href="computational-neuroscience.html">Computational Neuroscience</a>
+            <a href="tensors-data-analysis.html">Tensors in Data Analysis</a>
+            <a href="SVM.html">Support Vector Machines</a>
+            <a href="OM.html">Nonlinear Optimization</a>
+        </div>
         <button class="toggle-mode" onclick="toggleMode()">🌞</button>
     </header>
     <h1>Understanding Support Vector Machines: A Deep Dive into SVMs</h1>
@@ -118,6 +172,7 @@
     <ul>
         <li><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1155/2021/5594899">Support Vector Machine Applications in Financial Distress Prediction: A Review</a></li>
         <li><a href="https://link.springer.com/content/pdf/10.1007/978-1-4302-5990-9_3.pdf">SVMs for Classification</a></li>
+        <li><a href="https://github.com/AQadir44/SVM">Great Repo to apply algo</a></li>
     </ul>
 
     <script>
@@ -128,6 +183,15 @@
                 modeButton.textContent = '🌞';
             } else {
                 modeButton.textContent = '🌚';
+            }
+        }
+
+        function toggleMenu() {
+            var menu = document.getElementById('menu');
+            if (menu.style.display === 'block') {
+                menu.style.display = 'none';
+            } else {
+                menu.style.display = 'block';
             }
         }
     </script>
