--- a/computational-neuroscience.html
+++ b/computational-neuroscience.html
@@ -96,6 +96,16 @@
         p {
             margin: 20px 0;
         }
+        .pdf-preview-container {
+            display: flex;
+            justify-content: center;
+            margin: 20px 0;
+        }
+        .pdf-preview {
+            width: 80%;
+            height: 500px;
+            border: 1px solid #ccc;
+        }
     </style>
 </head>
 <body>
@@ -158,7 +168,15 @@
             simulate GLIF neuron response
             analyze spike patterns and firing rates
     </code></pre>
-
+   
+    <h2>My Work</h2>   
+    <p>My current research focuses on extending the GLIF model to capture more complex neuronal dynamics, such as adaptation, synaptic plasticity, and network interactions. By incorporating these additional features, we aim to create more biologically realistic models that can better explain the behavior of real neurons and neuronal circuits.</p>
+ 
+    <div class="pdf-preview-container">
+        <embed src="GLIF.pdf" type="application/pdf" class="pdf-preview">
+    </div>
+    <p>Im currently working on an implementation of a PTree data analysis system, written in C. The code is designed to process and analyze raster files (e.g., GLIF.dat) and perform event tree analysis using the PTree structure.</p>
+    <p>Additionally, I am exploring a phenomena known as the Chimera State where interconnected networks of neurons exhibit coexisting patterns of synchronized and desynchronized activity. New understanding and findings could help address epilepsy and alzheimers in the brain! </p>
     <h2>Conclusion</h2>
     <p>The Generalized Leaky Integrate-and-Fire (GLIF) model is a powerful tool for modeling neuronal dynamics. Its simplicity and computational efficiency make it ideal for simulating large networks of neurons and exploring complex brain functions. By leveraging the GLIF model, researchers can gain insights into the fundamental mechanisms of neural computation and sensory processing.</p>
     <h2>Further Reading and Resources</h2>
