--- a/computational-neuroscience.html
+++ b/computational-neuroscience.html
@@ -75,6 +75,10 @@
             padding: 10px;
             border-radius: 5px;
         }
+        a:not(.menu a) {
+    color: #4CAF50; /* Change non-menu links to green */
+}
+
         .menu a {
             color: white;
             text-decoration: none;
@@ -122,6 +126,7 @@
             <a href="tensors-data-analysis.html">Tensors in Data Analysis</a>
             <a href="SVM.html">Support Vector Machines</a>
             <a href="OM.html">Nonlinear Optimization</a>
+            <a href="EPT.html">Epithelial-Mesenchymal Transition (EMT)</a>
         </div>
         <button class="toggle-mode" onclick="toggleMode()">🌞</button>
     </header>
