--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             color: #f9f9f9;
         }
         header {
-            background-color: #eebf27;
+            background-color: #4b73be;
             color: white;
             padding: 20px;
             text-align: center;
@@ -71,7 +71,7 @@
             position: absolute;
             top: 60px;
             left: 20px;
-            background-color: #eebf27;
+            background-color:  #4b73be;;
             border: 1px solid #ccc;
             padding: 10px;
             border-radius: 5px;
@@ -95,7 +95,7 @@
             margin-top: 10px;
         }
         .social-icons a {
-            background: #eebf27;
+            background:  #4b73be;;
             padding: 6px;
             font: semibold;
             text: white;
@@ -122,7 +122,7 @@
             flex: 1;
         }
         .card {
-            background: rgb(226, 211, 141);
+            background: rgb(100, 141, 202);
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             margin: 10px;
             padding: 20px;
@@ -190,7 +190,7 @@
             color: #f9f9f9;
         }
         footer {
-            background-color: #eebf27;
+            background-color: #4b73be;;
             color: white;
             padding: 15px;
             text-align: center;
