--- a/SVM.html
+++ b/SVM.html
@@ -100,6 +100,12 @@
         p {
             margin: 20px 0;
         }
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
     </style>
 </head>
 <body>
@@ -156,6 +162,8 @@
         <li>Radial Basis Function (RBF): \( \exp(-\gamma \|x - x'\|^2) \)</li>
         <li>Sigmoid: \( \tanh(\alpha x \cdot x' + c) \)</li>
     </ul>
+   
+    <img src="SVM.png" alt="MINLP approach" class="center">
 
     <h2>SVM in Practice</h2>
     <p>In practical applications, SVMs are used for a variety of tasks such as:</p>
