--- a/EPT.html
+++ b/EPT.html
@@ -142,7 +142,7 @@
 
     <h2>Interactive Visualization</h2>
     <video width="640" height="480" controls>
-        <source src="C2vsA2.mp4" type="video/mp4">
+        <source src="data/C2vsA2.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     <p>Video: Effect of cell-cell E-cadherin-dependent adhesion (here A2 = 12) and Rac1-dependent cell speed (here C2 = 4).</p>
