--- a/OM.html
+++ b/OM.html
@@ -186,7 +186,7 @@
     <p>\[ L(W_1, W_2) = \frac{1}{n} \sum_{i=1}^{n} (y_i - \hat{y}_i)^2 \]</p>
     <p>where \( y_i \) is the actual output, \( \hat{y}_i \) is the predicted output, and \( n \) is the number of samples. The goal is to minimize \( L(W_1, W_2) \) by adjusting \( W_1 \) and \( W_2 \) using gradient descent.</p>
     
-    <img src="NL.png" alt="MINLP approach" class="center">
+    <img src="data/NL.png" alt="MINLP approach" class="center">
     <p class="caption">The MINLP approach</p>
 
     <h2>Applications of Nonlinear Optimization</h2>
