--- a/SVM.html
+++ b/SVM.html
@@ -163,7 +163,7 @@
         <li>Sigmoid: \( \tanh(\alpha x \cdot x' + c) \)</li>
     </ul>
    
-    <img src="SVM.png" alt="MINLP approach" class="center">
+    <img src="data/SVM.png" alt="MINLP approach" class="center">
 
     <h2>SVM in Practice</h2>
     <p>In practical applications, SVMs are used for a variety of tasks such as:</p>
