--- a/computational-neuroscience.html
+++ b/computational-neuroscience.html
@@ -178,7 +178,7 @@
     <p>My research focuses on extending the GLIF model to capture more complex neuronal dynamics, such as adaptation, synaptic plasticity, and network interactions. By incorporating these additional features, we aim to create more biologically realistic models that can better explain the behavior of real neurons and neuronal circuits.</p>
  
     <div class="pdf-preview-container">
-        <embed src="GLIF.pdf" type="application/pdf" class="pdf-preview">
+        <embed src="data/GLIF.pdf" type="application/pdf" class="pdf-preview">
     </div>
     <p>I'm currently working on an implementation of a PTree data analysis system, written in C. The code is designed to process and analyze raster files (e.g., GLIF.dat) and perform event tree analysis using the PTree structure.</p>
     <p>Additionally, I am exploring a phenomena known as the Chimera State where interconnected networks of neurons exhibit coexisting patterns of synchronized and desynchronized activity. New understanding and findings could help address epilepsy and alzheimers in the brain! </p>
