--- a/tensors-data-analysis.html
+++ b/tensors-data-analysis.html
@@ -161,7 +161,7 @@
     <p>\[ \mathbf{T} \approx \sum_{r=1}^{R} \mathbf{a}_r \circ \mathbf{b}_r \circ \mathbf{c}_r \]</p>
     <p>Here, \( \mathbf{a}_r, \mathbf{b}_r, \mathbf{c}_r \) are vectors, and \( \circ \) denotes the outer product.</p>
     
-    <img src="T.png" alt="MINLP approach" class="center">
+    <img src="data/T.png" alt="MINLP approach" class="center">
 
     <h2>Example: Collaborative Filtering in Recommender Systems</h2>
     <p>Collaborative filtering is a technique used by recommender systems to predict user preferences for items. This method relies on user-item interaction data, which can be represented as a sparse matrix. When extending collaborative filtering to handle more complex data, tensors can be used.</p>
